backstage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: devops-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
          command: ["/bin/sh", "-c"]
          args:
            - |
              docker-entrypoint.sh postgres &
              sleep 5
              psql -U postgres -tc "SELECT 1 FROM pg_database WHERE datname = 'backstage'" | grep -q 1 || psql -U postgres -c "CREATE DATABASE backstage WITH OWNER backstage;"
              wait
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: devops-tools
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: devops-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      containers:
        - name: backstage
          image: ghcr.io/backstage/backstage:latest
          ports:
            - containerPort: 7007
          volumeMounts:
            - name: config-volume
              mountPath: /app
      volumes:
        - name: config-volume
          configMap:
            name: backstage-config
---
apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: devops-tools
spec:
  selector:
    app: backstage
  ports:
    - protocol: TCP
      nodePort: 30091
      targetPort: http
      port: 7007
  type: NodePort
