ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rules
  namespace: devops-tools
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /jenkins/$1
spec:
  ingressClassName: nginx
  rules:
  - host: devops.local
    http:
      paths:
      - path: /jenkins(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: jenkins-service
            port:
              number: 8080
